# rootkit

./: CMakeLists.txt  Makefile  README.md  example.c  ftrace_helper.h  get_magic.py  greet.c  greet.h  hide_driver.c  hide_driver.h  hide_module.c  hide_module.h  hide_port.c  hide_port.h  hide_process.c  hide_process.h  hook_kill.c  hook_kill.h  hook_mkdir.c  hook_mkdir.h  hook_random.c  hook_random.h  kill.c  log_clean.c  log_clean.h  main.c  mkdir.c  reveal_ftrace.c  reveal_ftrace.h  rootkitscan.c  setroot.c  setroot.h
cmake/: FindKernelHeaders.cmake
